--- a/myapp/templates/product/product_category.html
+++ b/myapp/templates/product/product_category.html
@@ -13,7 +13,7 @@
 
     <body>
 
-        {% for p in product %}
+        {% for p in list %}
             <div>
                 <hr>
                 
