--- a/myapp/templates/product/product_detail.html
+++ b/myapp/templates/product/product_detail.html
@@ -1,21 +1,28 @@
+
+{% extends "./base.html" %}
+
+{% block content %}
+
 <html>
 
 
 <head>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 
 
     <body>
-        <h1>{{object.name}}</h1>
-        <h1>{{object.image}}</h1>
-        <h1>{{object.price}}</h1>
-        <h1>{{object.stock}}</h1>
-        <h1>{{object.description}}</h1>
+        <img alt="view detail"  style="width: 420px; height: 240px;" src=" {{ object.image.url }}">
+        <p>Product name:{{object.name}}</p>
+        <p>Price:{{object.price}}</p>
+        <p>In Stock:{{object.stock}}</p>
+        <p>Description:{{object.description}}</p>
         
         
 
         {% comment %} <a href="{% url  %}">hgffgn</a> {% endcomment %}
+        {% endblock %}
 
     </body>
-</head>
 </html>
