--- a/myapp/templates/product/product_list.html
+++ b/myapp/templates/product/product_list.html
@@ -1,20 +1,39 @@
+
+{% extends "./base.html" %}
+
+{% block content %}
+
+{% load static %}
 <html>
-    <head></head>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    </head>
+
 
     <body>
-        <a href="{% url 'myapp:price_list' %}">product Filter under 1000</a>
 
+        {% comment %} <a href="{% url 'myapp:price_list' %}" class="btn btn-outline-success my-3">
+            <i class="fas fa-plus"></i>product Filter under 1000</a>
+             {% endcomment %}
         {% for p in productsss %}
             <div>
-                <a href="{% url 'myapp:detail' pk=p.pk %}">Product Detail</a>
-                <p>{{ p.name }}</p>
-                <p>{{ p.price }}</p>
+                <hr>
+               
+                
                 {% comment %} <p>{{ p.stock }}</p> {% endcomment %}
                 {% comment %} <p>{{ p.description }}</p> {% endcomment %}
-                <p>{{ p.image }}</p>
+                <a href="{% url 'myapp:detail' pk=p.pk %}"> <img alt="view detail"  style="width: 420px; height: 240px;" src=" {{ p.image.url }}">
+                </a>
+                <p>{{ p.name }}</p>
+                <p>{{ p.price }}</p>
                 {% comment %} <p>{{ p.category }}</p> {% endcomment %}
                 {% comment %} <p>{{ p.discount }}</p> {% endcomment %}
-            </div>
+
         {% endfor %}
+        {% endblock %}
+
+    </div>
+
     </body>
 </html>
